@@ -1,6 +1,9 @@
 0.07 2022-09-27
   [Test Improvement]
-    * Add the test of the exit method in the Sys::Socket class on Windows.
+    * Add the test of the exit method in the Sys::Process class on Windows.
+    * Add the test of the execv method in the Sys::Process class on Windows.
+  [Test Fix]
+    * Fix the test of the times method in the Sys::Process class.
 0.06 2022-09-27
   [Test Fix]
     * Fix the test of the setpriority method in the Sys::Process class.
